--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(to bottom right, rgba(69,69,69, 0.8), rgba(0, 0, 0, 0.5)), url("/images/banner.jpg");
+    background-image: linear-gradient(to bottom right, rgba(69,69,69, 0.8), rgba(0, 0, 0, 0.5)), url("../images/banner.jpg");
     background-size: cover;
     background-position: center;
 }
